# GitGuard

./: .gitignore  GitGuard-Pitch.html  README.md  install.sh  pyproject.toml
.claude/: settings.local.json
.git.backup/: HEAD  config  index
.git.backup/logs/: HEAD
.git.backup/logs/refs/heads/backup/: main
.git.backup/refs/heads/backup/: main
gitguard/: __init__.py  archive.py  assignments.py  cli.py  entropy.py  fixes.py  git_history.py  models.py  remediation.py  report.py  rules.py  scanner.py  utils.py  vulns.py
tests/: demo_source.py  test_detection.py  test_entropy.py  test_output.py  test_remediation.py  test_rules.py  test_scanner.py
